package org.totalgrid.reef.proto.Communications;

option java_package = "org.totalgrid.reef.proto";
option java_outer_classname = "Communications";

message EndpointState {

    enum State {
        COMMS_UP = 1;
        COMMS_DOWN = 2;
        UNKNOWN = 3;
        ERROR = 4;
    }

	required State enum = 1;
}


message ChannelState {

    enum State {
        CLOSED = 1;
        OPENING = 2;
        OPEN = 3;
        ERROR = 4;
        UNKNOWN = 5;
    }

    required State enum = 1;

}


message EndpointStatus {
   optional string uid = 1;
   optional EndpointState state = 2;
}

message ChannelStatus {
   optional string uid = 1;
   optional ChannelState state = 2;
}
